--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics     
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag python_hello_world:$(date +%s)
+        run: docker build --file Dockerfile --tag python_hello_world:$(date +%s) .
         
       - name: Scan image
         uses: Azure/container-scan@v0
