--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python Container
+name: Python package
 
 on: [push]
 
@@ -6,40 +6,44 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.10"]
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.7
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: 3.7
-          
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-          
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics     
+      - name: OUIIIII
+        run: |
+          python3 helloworld.py
+
       - name: Hello World! (test)
         run: python3 helloworld.py
         
       - name: Build and Tag image (Docker)
-        run: docker build -f ./Dockerfile -t helloworld-app .
+        run: docker build -f ./Dockerfile -t python_hello_world .
         
       - name: Scan image
         uses: Azure/container-scan@v0
         with:
-          image-name: helloworld-app
+          image-name: python_hello_world
           severity-threshold: CRITICAL
           run-quality-checks: true
           
       - name: Push image
-        run: docker push helloworld-app
+        run: docker push python_hello_world
         
